# simple_qt_qobject

./: CMakeLists.txt  ReadMe.md
src/: simple_qobject.cpp  simple_qobject.h  simple_qobject_test.cpp
